// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repairs reducer should handle api_get_member/ndock 1`] = `
Array [
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 1,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 2,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
  Object {
    "api_complete_time": 1613465689647,
    "api_complete_time_str": "2021-02-16 17:54:49",
    "api_id": 3,
    "api_item1": 240,
    "api_item2": 0,
    "api_item3": 450,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 262,
    "api_state": 1,
  },
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 4,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
]
`;

exports[`repairs reducer should handle api_port/port 1`] = `
Array [
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 1,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 2,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 3,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
  Object {
    "api_complete_time": 0,
    "api_complete_time_str": "0",
    "api_id": 4,
    "api_item1": 0,
    "api_item2": 0,
    "api_item3": 0,
    "api_item4": 0,
    "api_member_id": 20221524,
    "api_ship_id": 0,
    "api_state": 0,
  },
]
`;
